refactor(quest): streamline quest script logic and enhance item handling